dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(EFLImageRotateDemo, 0.0.1)


AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(EFLImageRotateDemo, 0.0.1)

AC_PROG_CC

PKG_CHECK_MODULES([EINA],  [eina >= 1.0.0])
PKG_CHECK_MODULES([EVAS],  [evas >= 1.0.0])
PKG_CHECK_MODULES([ECORE], [ecore >= 1.0.0])

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

