MAINTAINERCLEANFILES = Makefile.in

bin_PROGRAMS=EFLImageRotateDemo
EFLImageRotateDemo_SOURCES=EFLImageRotateDemo.c

AM_CFLAGS = \
-lecore_evas \
-lecore_x \
-I/usr/include/freetype2 \
@EINA_CFLAGS@ \
@EVAS_CFLAGS@ \
@ECORE_CFLAGS@


EFLImageRotateDemo_LDADD = \
@EINA_LIBS@ \
@EVAS_LIBS@ \
@ECORE_LIBS@
